VM-全家桶/consul-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tensuns-ingress
  namespace: tensuns
spec:
  tls:
    - hosts:
        - "barry-consul.***.com"
      secretName: tls-****.com
  rules:
    - host: "barry-consul.****.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tensuns
                port:
                  number: 1026
